# WorldIMaker

./: CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  Makefile  README.md  cmake_install.cmake
assets/controlPoints/: controlpoints.txt  controlpoints2.txt  cp3.txt
assets/save/: save1.txt
assets/shaders/: 3D.vs.glsl  coloredCube.fs.glsl  directionallight.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
doc/: CMakeLists.txt  Doxyfile-html  Doxyfile-html.cmake  Makefile  cmake_install.cmake
doc/doxygen/: CMakeLists.txt  Doxyfile-html.cmake  cmake_install.cmake
glimac/src/: TrackballCamera.cpp
include/: menu.hpp
lib/glimac/: Makefile  cmake_install.cmake
lib/glimac/include/glimac/: Cube.hpp  Cursor.hpp  Generate.hpp  Object.hpp  Program.hpp  Save.hpp  Scene.hpp  Scult.hpp  TrackballCamera.hpp  common.hpp  doxygenMenu.hpp
lib/glimac/src/: Cube.cpp  Cursor.cpp  Generate.cpp  Object.cpp  SDLWindowManager.cpp  Save.cpp  Scene.cpp  Scult.cpp  TrackballCamera.cpp  controlpoints.txt
lib/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/imgui/include/imgui/: imgui_impl_opengl3.h
lib/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_stdlib.cpp  imgui_widgets.cpp
src/: main.cpp  menu.cpp
src/shaders/: directionallight.fs.glsl
